# minecraft_clone

./: CMakeLists.txt  README.md  main.cpp
include/: stb_image.h
include/assimp/: StringComparison.h  camera.h  qnan.h  types.h
include/glad/: glad.h
src/: glad.c
src/core/: Application.cpp  Application.h  InputManager.cpp  InputManager.h  Window.cpp  Window.h  World.cpp  World.h
src/graphics/: BlockTextureAtlas.cpp  BlockTextureAtlas.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/graphics/shaders/: chunk.frag  chunk.vert  crosshair.frag  crosshair.vert  cube.frag  cube.vert
src/util/: FaceDirection.h
src/world/: Block.cpp  Block.h  GlobalLight.cpp  GlobalLight.h  Player.cpp  Player.h
src/world/chunks/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
